--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,10 @@
 Changelog SRF.ch
 ================
 
+srfch 2.0.1
+    * Only refer to this add-ons internal files in the banners on rsi.ch and srf.ch/play
+    * Better triggering adding the banner on srf.ch/play and rsi.ch pages
+
 srfch 2.0.0
     * Ported the add-on to the new WebExtensions standard (which resulted in some small
       changes in its appearance and behavior)
